# Koyo_PLC_Scada

./: CMakeLists.txt  CMakeLists.txt.user.7aba626  CMakeLists.txt.user.d82aa91  README.md  main.cpp  plc_connect.cpp  plc_connect.h
fltk/: gui1  gui1.cxx  gui1.h
